k8s/deploy/api.tpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goat-api
  namespace: ${NAMESPACE}
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goat-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: goat-api
    spec:
      containers:
        - image: ${DOCKER_IMAGE}
          imagePullPolicy: Always
          name: goat-api
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 120
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 5000
            initialDelaySeconds: 20
            timeoutSeconds: 60
            periodSeconds: 120
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: goat-api
  namespace: ${NAMESPACE}
spec:
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
  selector:
    app: goat-api
