k8s/deploy/r5.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: v1
kind: Service
metadata:  
  namespace: ${NAMESPACE}
  name: r5-service
spec:
  type: ExternalName
  externalName:  ${R5_HOST}
